# slipway

./: .gitignore  .ruby-gemset  .travis.yml  .versions.conf  Gemfile  JenkinsPod.yml  Jenkinsfile  LICENSE  LICENSE.txt  Pipfile  README.md  SHARE.md  dev_dock.gemspec  help.txt  mypy.ini  publish.sh  pyproject.toml  setup.py  typescript
.github/workflows/: .master.yml.swp  master.yml
lib/: dev_dock.rb
lib/dev_dock/: binds.rb  container.rb  image.rb  log.rb  options.rb  util.rb  version.rb  volumes.rb
slipway/: __init__.py  argument_parser.py  binds.py  configuration.py  container.py  entrypoint.py  image.py  progress_bar.py  ssh_server.py  util.py  volumes.py
slipway/client/: __init__.py  docker.py  podman.py
slipway/command_proxy/: __init__.py  client.py  protocol.py  server.py  stream.py
slipway/xdg_open/: __init__.py  client.py  server.py
spec/: binds_spec.rb  container_spec.rb  dev_dock_spec.rb  options_spec.rb  spec_helper.rb
test/: conftest.py  test_binds.py  test_client.py  test_command_proxy.py  test_configuration.py  test_container.py  test_image.py  test_util.py  test_volumes.py  test_xdg_open.py  util.py
test/fixtures/: Dockerfile  configuration.yaml  entrypoint.sh
