[tool.poetry]
name = "slipway"
version = "0.14.0"
description = "CLI tool for managing development containers"
authors = ["AGhost-7 <jonathan.boudreau.92@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
slipway = 'slipway:main'

[tool.poetry.dependencies]
python = "^3.8"
docker = "^6.1.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
mypy = "^0.971"
bpython = "^0.21"
black = "^22.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
