[tool.poetry]
name = "slipway"
version = "0.14.0"
description = "CLI tool for managing development containers"
authors = ["AGhost-7 <jonathan.boudreau.92@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
slipway = 'slipway:main'

[tool.poetry.dependencies]
python = "^3.10"
docker = "^7.0.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
mypy = "^1.16.1"
bpython = "^0.21"
black = "^22.6.0"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20250516"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
