[project]
name = "slipway"
version = "0.14.0"
description = "CLI tool for managing development containers"
authors = [{ name = "AGhost-7", email = "jonathan.boudreau.92@gmail.com" }]
requires-python = ">=3.10,<4"
license = "MIT"
dependencies = [
    "docker>=7.0.0,<8",
    "PyYAML>=6.0,<7",
]

[project.scripts]
slipway = "slipway:main"

[dependency-groups]
dev = [
    "pytest>=6.0.0,<7",
    "mypy>=1.16.1,<2",
    "black>=22.6.0,<23",
    "types-pyyaml>=6.0.12.20250516,<7",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
